tests/fixtures/invalid/str_lshift_dict.py
# Cannot left shift Str and Dict[str, int]
x: str = "hello" << {"a": 1}
